--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
 
 .seccion-oscura {
   color: white;
-  background-color: #1b1b32;
+  background-color: #dbe459f5;
 }
 
 .seccion-clara {
@@ -52,7 +52,7 @@ h1 {
 .btn-info {
   font-size: 1.1rem;
   margin: 20px;
-  background-color: #7ade30;
+  background-color: rgb(77, 73, 138);
   border-style: none;
   color: #f5f6f7;
 }
@@ -124,7 +124,7 @@ h1 {
 
 .experiencia i {
   font-size: 2.5rem;
-  color: #7ade30;
+  color: #268d3c;
   background-color: #0a0a23;
   padding: 8px 19px;
   border-radius: 50%;
@@ -207,8 +207,8 @@ h1 {
 /* Articulos */
 
 .articulos {
-  min-height: 500px;
-  padding: 30px;
+  min-height: 10px;
+  padding: 20px;
 }
 
 .articulos .card {
@@ -224,20 +224,20 @@ h1 {
 /* Testimonios */
 
 .testimonios {
-  padding: 40px 40px 80px 40px;
+  padding: 10px 10px 5px 10px;
 }
 
 .testimonios .carousel {
-  max-width: 800px;
+  max-width: 1100px;
 }
 
 .carousel-item {
-  height: 500px;
+  height: 900px;
 }
 
 .carousel-item .container {
   width: 100%;
-  height: 100%;
+  height: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -245,13 +245,14 @@ h1 {
 }
 
 .testimonio-imagen {
-  height: 150px;
-  width: 150px;
-  margin: 10px 10px 20px 10px;
+  height: 80px;
+  width: 80px;
+  max-width: 40%;
+  margin: 10px 5px 5px 10px;
 }
 
 .testimonio-texto {
-  max-width: 70%;
+  max-width: 50%;
   font-size: 20px;
   text-align: center;
   font-family: 'Share Tech Mono', monospace;
@@ -263,15 +264,15 @@ h1 {
 }
 
 .testimonio-info p {
-  margin-bottom: 0;
+  margin-bottom: 40px;
 }
 
 .testimonio-footer .cliente {
-  font-size: 1.2rem;
+  font-size: 0.2rem;
 }
 
 .testimonio-info .cargo {
-  font-size: 0.9rem;
+  font-size: 1.5rem;
   color: #656060;
 }
 
@@ -285,7 +286,7 @@ h1 {
 
 .contacto .rectangulo {
   margin-top: -5rem;
-  background-color: rgb(13, 110, 253);
+  background-color: rgb(77, 73, 138);
   border-radius: 10px;
   box-shadow: 0px 1px 4px 1px white;
 }
@@ -330,12 +331,13 @@ h1 {
 /* Pie de pagina (footer) */
 
 footer {
-  min-height: 500px;
+  min-height: 40px;
 }
 
 .footer-logo {
-  height: 80px;
-  width: 80px;
+  height: 40px;
+  width: 40px;
+  max-width: 8%;
   margin: 10px;
 }
 
@@ -367,7 +369,7 @@ footer {
 
 .iconos-redes-sociales a:hover {
   background-color: white;
-  border: 2px solid rgb(13, 110, 253);
+  border: 2px solid #dbe459f5;
 }
 
 .iconos-redes-sociales a:hover i {
